--- a/pages.css
+++ b/pages.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   height: 250px;
-  background: url('/images/Loo.png') no-repeat center center;
+  background: url('../images/Loo.png') no-repeat center center;
   background-size: cover;
   background-attachment: scroll;
   background-repeat: no-repeat;
